[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "lb"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
chrono = {version = "0.4.19", features = ["serde"]}
etcetera = "0.3.2"
itertools = "0.10.0"
serde = {version = "1.0", features = ["derive"]}
tempfile = "3.2"
unicode-segmentation = "1.7"
